[gd_scene load_steps=72 format=3 uid="uid://33kwqbnxj6dq"]

[ext_resource type="Script" path="res://player/player.gd" id="1_8f13i"]
[ext_resource type="Shader" path="res://entity/entity.gdshader" id="1_321ed"]
[ext_resource type="PackedScene" uid="uid://bjtxacd0qfbqj" path="res://menu/death/death.tscn" id="2_4qn83"]
[ext_resource type="Shader" path="res://player/ground.gdshader" id="2_k5ka0"]
[ext_resource type="Script" path="res://player/player_stats.gd" id="2_s8nph"]
[ext_resource type="FontFile" uid="uid://due1hf7ysjp84" path="res://menu/PixelatedEleganceRegular-ovyAA.ttf" id="5_tgkuv"]
[ext_resource type="Script" path="res://player/hud/level_counter.gd" id="6_jtmi4"]
[ext_resource type="Script" path="res://player/gun/rod_swivel.gd" id="6_swhb5"]
[ext_resource type="Resource" uid="uid://ci2k3ke86qm0e" path="res://player/ability_system/abilities/loot_table.tres" id="7_75cg3"]
[ext_resource type="Texture2D" uid="uid://cfyf3iuyo4vwe" path="res://player/fishing/rod_placeholder.png" id="7_l7pv7"]
[ext_resource type="Script" path="res://player/hud/ability_choice/ability_picker.gd" id="7_v6y57"]
[ext_resource type="Texture2D" uid="uid://b4627krlsb3md" path="res://icon.png" id="8_18no8"]
[ext_resource type="Script" path="res://player/hud/hit_indicator.gd" id="8_lh3hs"]
[ext_resource type="Script" path="res://player/fishing/hook.gd" id="8_qymma"]
[ext_resource type="Theme" uid="uid://butlk6m3p6ywf" path="res://player/hud/experience_bar/experience_bar.tres" id="9_3kt64"]
[ext_resource type="Script" path="res://player/hud/countdown_timer.gd" id="9_5x5lc"]
[ext_resource type="Script" path="res://player/hud/experience_bar/experience_bar.gd" id="10_pxkv6"]
[ext_resource type="Script" path="res://entity/experience/experience_radius.gd" id="11_fmot2"]
[ext_resource type="PackedScene" uid="uid://ckldvouneujm7" path="res://player/hud/stats_display/stats_display.tscn" id="11_g73cy"]
[ext_resource type="Script" path="res://player/experience_value.gd" id="12_267ds"]
[ext_resource type="AudioStream" uid="uid://i5mn37rth3s2" path="res://entity/experience/xp.wav" id="12_ax3nw"]
[ext_resource type="Texture2D" uid="uid://055te3n4jhal" path="res://player/fishing/hook.png" id="12_tp034"]
[ext_resource type="Script" path="res://player/pickup_radius.gd" id="12_yq8ij"]
[ext_resource type="Texture2D" uid="uid://cs040aleyeibp" path="res://player/billy_bob.png" id="13_2cvpx"]
[ext_resource type="Theme" uid="uid://hn44xjwjebxk" path="res://player/hud/health_bar/health_bar.tres" id="13_soul0"]
[ext_resource type="PackedScene" uid="uid://bjpfq2ef27wp4" path="res://player/hud/health_bar/health_bar.tscn" id="13_vcw5i"]
[ext_resource type="Script" path="res://player/hud/health_bar/health_bar.gd" id="14_543rk"]
[ext_resource type="Script" path="res://player/hud/hud.gd" id="15_60owl"]
[ext_resource type="Script" path="res://entity/entity_sprite.gd" id="15_ckibm"]
[ext_resource type="Script" path="res://player/player_camera.gd" id="15_n0ywd"]
[ext_resource type="Script" path="res://player/hud/ability_display.gd" id="16_fr4t7"]
[ext_resource type="Script" path="res://player/experience_tracker.gd" id="17_8q3by"]
[ext_resource type="Script" path="res://player/ability_system/ability_system.gd" id="18_wo8qc"]
[ext_resource type="Shader" path="res://player/hud/level_effect.gdshader" id="19_74cft"]
[ext_resource type="Script" path="res://player/health_value.gd" id="19_ky1vu"]
[ext_resource type="Script" path="res://levels/level_aesthetics.gd" id="22_ffm7r"]
[ext_resource type="Texture2D" uid="uid://c3hsluo3v6hr1" path="res://levels/level1/level1_background.png" id="23_77gle"]
[ext_resource type="Script" path="res://player/weapon_manager.gd" id="24_jn8j2"]
[ext_resource type="AudioStream" uid="uid://bylxksq47v5jc" path="res://levels/level1/rage-15292.mp3" id="26_dwusy"]
[ext_resource type="Shader" path="res://levels/flashlight.gdshader" id="26_ybvvv"]
[ext_resource type="AudioStream" uid="uid://c6lmy1o8c81rn" path="res://levels/level3/the-unkillable-155342.mp3" id="28_aow06"]
[ext_resource type="AudioStream" uid="uid://bxapg40fyu7qy" path="res://levels/level2/deadite-ash-vs-evil-dead-song-8688.mp3" id="29_7cluu"]
[ext_resource type="AudioStream" uid="uid://bvfislwpk2aub" path="res://levels/level4/fury-253300.mp3" id="30_5weuf"]
[ext_resource type="AudioStream" uid="uid://sbfxhklb55v6" path="res://entity/hit.wav" id="31_6phdh"]

[sub_resource type="LabelSettings" id="LabelSettings_e4lj6"]
font = ExtResource("5_tgkuv")
font_size = 36

[sub_resource type="Gradient" id="Gradient_1aqu2"]
offsets = PackedFloat32Array(0.559902, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ypfjj"]
gradient = SubResource("Gradient_1aqu2")
fill = 1
fill_from = Vector2(0.516239, 0.494017)

[sub_resource type="LabelSettings" id="LabelSettings_asjdf"]
font_color = Color(1, 0, 0.792157, 1)
outline_size = 10
outline_color = Color(1, 0.27451, 0.54902, 0.262745)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_upf5s"]
shader = ExtResource("2_k5ka0")
shader_parameter/scale = 4.0
shader_parameter/power = 1.0
shader_parameter/modulate = Color(1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_petf2"]
noise_type = 2
fractal_octaves = 2
fractal_gain = 9.845

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qc4lt"]
seamless = true
noise = SubResource("FastNoiseLite_petf2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plmxn"]
shader = ExtResource("19_74cft")
shader_parameter/scale = 1.0
shader_parameter/speed = 2.0
shader_parameter/color = Color(0.490196, 0.592157, 1, 0.737255)
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/cutoff = 0.0
shader_parameter/caustic_noise = SubResource("NoiseTexture2D_qc4lt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qx478"]
shader = ExtResource("2_k5ka0")
shader_parameter/scale = 4.0
shader_parameter/power = 1.0
shader_parameter/modulate = Color(0.273938, 0.23476, 0.611301, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7m1hu"]
shader = ExtResource("19_74cft")
shader_parameter/scale = 1.0
shader_parameter/speed = 4.0
shader_parameter/color = Color(0.0289914, 0.0455986, 0.132388, 1)
shader_parameter/modulate = Color(1, 1, 1, 0.505882)
shader_parameter/cutoff = -0.47
shader_parameter/caustic_noise = SubResource("NoiseTexture2D_qc4lt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pqm6f"]
shader = ExtResource("26_ybvvv")
shader_parameter/modulate = Color(0.745098, 0.819608, 0.972549, 0.364706)
shader_parameter/steps = 12

[sub_resource type="Gradient" id="Gradient_prtup"]
offsets = PackedFloat32Array(0, 0.535452)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ifgk3"]
gradient = SubResource("Gradient_prtup")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r3ydj"]
shader = ExtResource("2_k5ka0")
shader_parameter/scale = 4.0
shader_parameter/power = 3.0
shader_parameter/modulate = Color(0.439185, 0.14302, 0.563848, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_30ge2"]
shader = ExtResource("19_74cft")
shader_parameter/scale = 1.0
shader_parameter/speed = 8.0
shader_parameter/color = Color(0.241222, 0.0586888, 0.287606, 1)
shader_parameter/modulate = Color(1, 1, 1, 0.505882)
shader_parameter/cutoff = -0.47
shader_parameter/caustic_noise = SubResource("NoiseTexture2D_qc4lt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sm4i7"]
shader = ExtResource("26_ybvvv")
shader_parameter/modulate = Color(0.547275, 0.3331, 0.795522, 0.364706)
shader_parameter/steps = 12

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ct3wy"]
shader = ExtResource("2_k5ka0")
shader_parameter/scale = 4.0
shader_parameter/power = 3.0
shader_parameter/modulate = Color(0.516634, 1.39579e-06, 0.310591, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pg48r"]
shader = ExtResource("19_74cft")
shader_parameter/scale = 1.0
shader_parameter/speed = 16.0
shader_parameter/color = Color(0.0288407, 6.58038e-09, 1.88011e-09, 1)
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/cutoff = 0.0
shader_parameter/caustic_noise = SubResource("NoiseTexture2D_qc4lt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f2wy2"]
shader = ExtResource("26_ybvvv")
shader_parameter/modulate = Color(0.894118, 0.388235, 0.639216, 0.152941)
shader_parameter/steps = 12

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qqrlv"]
resource_local_to_scene = true
shader = ExtResource("1_321ed")
shader_parameter/flash = false

[sub_resource type="CircleShape2D" id="CircleShape2D_sa55p"]
radius = 16.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_27ynm"]
noise_type = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_35cqd"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5cqtx"]
radius = 25.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dv57t"]
radius = 7.0
height = 26.0

[sub_resource type="Animation" id="Animation_ileuq"]
resource_name = "take_damage"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_flash"
}, {
"args": [false],
"method": &"set_flash"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwr83"]
_data = {
"take_damage": SubResource("Animation_ileuq")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_8f13i")
death_screen = ExtResource("2_4qn83")

[node name="PlayerStats" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_s8nph")
ranged_spread_mod = 1.0
experience_absorb_range = 35.0
armor = 1
max_health = 20
health = 20
movement_speed = 300.0

[node name="InvincibilityTimer" type="Timer" parent="PlayerStats"]
one_shot = true

[node name="RegenTimer" type="Timer" parent="PlayerStats"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("15_60owl")

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
offset_left = 13.0
offset_top = 6.0
offset_right = 173.0
offset_bottom = 91.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer"]
layout_mode = 2

[node name="LevelCounter" type="Label" parent="HUD/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(49.91, 0)
layout_mode = 2
text = "9"
label_settings = SubResource("LabelSettings_e4lj6")
horizontal_alignment = 1
script = ExtResource("6_jtmi4")

[node name="TopLeft" type="VBoxContainer" parent="HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="HUD/VBoxContainer/HBoxContainer/TopLeft" node_paths=PackedStringArray("stats_node")]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("13_soul0")
show_percentage = false
script = ExtResource("14_543rk")
stats_node = NodePath("../../../../../PlayerStats")

[node name="HealthValue" type="Label" parent="HUD/VBoxContainer/HBoxContainer/TopLeft/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_tgkuv")
theme_override_font_sizes/font_size = 9
text = "20/20"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("19_ky1vu")

[node name="ExperienceBar" type="ProgressBar" parent="HUD/VBoxContainer/HBoxContainer/TopLeft"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("9_3kt64")
show_percentage = false
script = ExtResource("10_pxkv6")

[node name="ExperienceValue" type="Label" parent="HUD/VBoxContainer/HBoxContainer/TopLeft/ExperienceBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_tgkuv")
theme_override_font_sizes/font_size = 9
text = "5/10"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("12_267ds")

[node name="StatsDisplay" parent="HUD/VBoxContainer" node_paths=PackedStringArray("stats") instance=ExtResource("11_g73cy")]
visible = false
layout_mode = 2
stats = NodePath("../../../PlayerStats")

[node name="PlayerHitIndicator" type="TextureRect" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_ypfjj")
script = ExtResource("8_lh3hs")

[node name="TopCenter" type="HBoxContainer" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_right = 64.5
offset_bottom = 45.0
grow_horizontal = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HUD/TopCenter"]
layout_mode = 2
texture = ExtResource("8_18no8")
stretch_mode = 5

[node name="CountdownTimer" type="Label" parent="HUD/TopCenter"]
layout_mode = 2
script = ExtResource("9_5x5lc")

[node name="AbilityPicker" type="VBoxContainer" parent="HUD"]
unique_name_in_owner = true
process_mode = 2
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -81.0
offset_right = -28.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("7_v6y57")

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/AbilityPicker"]
layout_mode = 2
alignment = 1

[node name="PickAbilityLabel" type="Label" parent="HUD/AbilityPicker/HBoxContainer"]
layout_mode = 2
text = "Pick Ability"
horizontal_alignment = 1

[node name="BacklogCount" type="Label" parent="HUD/AbilityPicker/HBoxContainer"]
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_asjdf")
horizontal_alignment = 1

[node name="AbilitySelection" type="HBoxContainer" parent="HUD/AbilityPicker"]
layout_mode = 2
size_flags_vertical = 3

[node name="AbilityDisplay" type="VBoxContainer" parent="HUD"]
visible = false
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("16_fr4t7")

[node name="AbilitySystem" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("18_wo8qc")
loot_table = ExtResource("7_75cg3")

[node name="HealthBar" parent="." node_paths=PackedStringArray("stats_node") instance=ExtResource("13_vcw5i")]
stats_node = NodePath("../PlayerStats")

[node name="LevelAesthetics" type="Node2D" parent="."]
script = ExtResource("22_ffm7r")

[node name="Level1" type="Node2D" parent="LevelAesthetics"]

[node name="BGSprite" type="Sprite2D" parent="LevelAesthetics/Level1"]
z_index = -50
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_upf5s")
scale = Vector2(3.94531, 2.6302)
texture = ExtResource("23_77gle")

[node name="LevelEffects" type="Sprite2D" parent="LevelAesthetics/Level1"]
z_index = -50
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_plmxn")
scale = Vector2(3.94531, 2.6302)
texture = ExtResource("23_77gle")

[node name="Music" type="AudioStreamPlayer" parent="LevelAesthetics/Level1"]
process_mode = 3
stream = ExtResource("26_dwusy")

[node name="Level2" type="Node2D" parent="LevelAesthetics"]

[node name="BGSprite" type="Sprite2D" parent="LevelAesthetics/Level2"]
z_index = -49
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_qx478")
scale = Vector2(3.94531, 2.6302)
texture = ExtResource("23_77gle")

[node name="LevelEffects" type="Sprite2D" parent="LevelAesthetics/Level2"]
z_index = -49
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_7m1hu")
scale = Vector2(3.94531, 2.6302)
texture = ExtResource("23_77gle")

[node name="Flashlight" type="Sprite2D" parent="LevelAesthetics/Level2"]
z_index = -49
material = SubResource("ShaderMaterial_pqm6f")
scale = Vector2(1.33594, 1.33594)
texture = SubResource("GradientTexture2D_ifgk3")

[node name="Music" type="AudioStreamPlayer" parent="LevelAesthetics/Level2"]
process_mode = 3
stream = ExtResource("29_7cluu")

[node name="Level3" type="Node2D" parent="LevelAesthetics"]
visible = false

[node name="BGSprite" type="Sprite2D" parent="LevelAesthetics/Level3"]
z_index = -48
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_r3ydj")
scale = Vector2(3.94531, 2.6302)
texture = ExtResource("23_77gle")

[node name="LevelEffects" type="Sprite2D" parent="LevelAesthetics/Level3"]
z_index = -48
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_30ge2")
scale = Vector2(3.94531, 2.6302)
texture = ExtResource("23_77gle")

[node name="Flashlight" type="Sprite2D" parent="LevelAesthetics/Level3"]
z_index = -48
material = SubResource("ShaderMaterial_sm4i7")
scale = Vector2(1.33594, 1.33594)
texture = SubResource("GradientTexture2D_ifgk3")

[node name="Music" type="AudioStreamPlayer" parent="LevelAesthetics/Level3"]
process_mode = 3
stream = ExtResource("28_aow06")

[node name="Level4" type="Node2D" parent="LevelAesthetics"]
visible = false

[node name="BGSprite" type="Sprite2D" parent="LevelAesthetics/Level4"]
z_index = -47
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_ct3wy")
scale = Vector2(3.94531, 2.6302)
texture = ExtResource("23_77gle")

[node name="LevelEffects" type="Sprite2D" parent="LevelAesthetics/Level4"]
z_index = -47
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_pg48r")
scale = Vector2(3.94531, 2.6302)
texture = ExtResource("23_77gle")

[node name="Flashlight" type="Sprite2D" parent="LevelAesthetics/Level4"]
z_index = -47
material = SubResource("ShaderMaterial_f2wy2")
scale = Vector2(1.33594, 1.33594)
texture = SubResource("GradientTexture2D_ifgk3")

[node name="Music" type="AudioStreamPlayer" parent="LevelAesthetics/Level4"]
process_mode = 3
stream = ExtResource("30_5weuf")

[node name="PlayerSprite" type="Sprite2D" parent="."]
z_index = 5
material = SubResource("ShaderMaterial_qqrlv")
texture = ExtResource("13_2cvpx")
script = ExtResource("15_ckibm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sa55p")
debug_color = Color(0.456537, 0.00266336, 0.919708, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
script = ExtResource("15_n0ywd")
max_offset = Vector2(70, 70)
noise = SubResource("FastNoiseLite_27ynm")

[node name="PickUpSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_ax3nw")
bus = &"Effects"

[node name="Experience" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("17_8q3by")

[node name="AbsorbRadius" type="Area2D" parent="Experience"]
collision_layer = 8
collision_mask = 8
script = ExtResource("11_fmot2")

[node name="AbsorbRadiusShape" type="CollisionShape2D" parent="Experience/AbsorbRadius"]
shape = SubResource("CircleShape2D_35cqd")

[node name="PickupRadius" type="Area2D" parent="Experience"]
collision_layer = 8
collision_mask = 8
script = ExtResource("12_yq8ij")

[node name="PickupRadiusShape" type="CollisionShape2D" parent="Experience/PickupRadius"]
shape = SubResource("CircleShape2D_5cqtx")

[node name="PickupSoundEffect" type="AudioStreamPlayer2D" parent="Experience"]
stream = ExtResource("12_ax3nw")
bus = &"Effects"

[node name="WeaponManager" type="Node2D" parent="."]
script = ExtResource("24_jn8j2")

[node name="RodSwivel" type="Node2D" parent="WeaponManager"]
script = ExtResource("6_swhb5")

[node name="Rod" type="Node2D" parent="WeaponManager/RodSwivel"]
position = Vector2(30, 0)

[node name="Sprite2D" type="Sprite2D" parent="WeaponManager/RodSwivel/Rod"]
rotation = 0.785398
texture = ExtResource("7_l7pv7")

[node name="hook" type="StaticBody2D" parent="WeaponManager/RodSwivel"]
collision_layer = 16
collision_mask = 34
script = ExtResource("8_qymma")

[node name="hookSprite2D" type="Sprite2D" parent="WeaponManager/RodSwivel/hook"]
position = Vector2(4, 0)
texture = ExtResource("12_tp034")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponManager/RodSwivel/hook"]
shape = SubResource("CapsuleShape2D_dv57t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lwr83")
}

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("31_6phdh")
volume_db = 15.0
bus = &"Effects"

[connection signal="death" from="PlayerStats" to="." method="_on_player_stats_death"]
[connection signal="experience_absorb_range_changed" from="PlayerStats" to="Experience/AbsorbRadius" method="_on_player_stats_experience_absorb_range_changed"]
[connection signal="regen_changed" from="PlayerStats" to="PlayerStats" method="_on_regen_changed"]
[connection signal="timeout" from="PlayerStats/InvincibilityTimer" to="PlayerStats" method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="PlayerStats/RegenTimer" to="PlayerStats" method="_on_regen_timer_timeout"]
[connection signal="health_ratio_changed" from="HUD/VBoxContainer/HBoxContainer/TopLeft/HealthBar" to="HUD/VBoxContainer/HBoxContainer/TopLeft/HealthBar/HealthValue" method="_on_health_bar_health_ratio_changed"]
[connection signal="experience_bar_value_changed" from="HUD/VBoxContainer/HBoxContainer/TopLeft/ExperienceBar" to="HUD/VBoxContainer/HBoxContainer/TopLeft/ExperienceBar/ExperienceValue" method="_on_experience_bar_experience_bar_value_changed"]
[connection signal="level_up" from="Experience" to="HUD/AbilityPicker" method="_on_experience_level_up"]
[connection signal="body_entered" from="Experience/AbsorbRadius" to="Experience/AbsorbRadius" method="_on_body_entered"]
[connection signal="body_entered" from="Experience/PickupRadius" to="Experience/PickupRadius" method="_on_body_entered"]
